--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     body { font-family: Arial, sans-serif; margin: 0; background: #fffaf7; color: #333; }
     header { background: #f8caca; padding: 15px; text-align: center; }
     nav a { margin: 0 15px; text-decoration: none; color: #333; font-weight: bold; }
+    nav a:hover { color: #d16b6b; }
     section { padding: 40px 20px; text-align: center; }
     h2 { color: #d16b6b; margin-bottom: 20px; }
     footer { text-align: center; background: #f8caca; padding: 15px; margin-top: 40px; }
@@ -40,3 +41,4 @@
 
 </body>
 </html>
+
