--- a/Products/Products.html
+++ b/Products/Products.html
@@ -8,10 +8,22 @@
     body { font-family: Arial, sans-serif; margin: 0; background: #fffaf7; color: #333; }
     header { background: #f8caca; padding: 15px; text-align: center; }
     nav a { margin: 0 15px; text-decoration: none; color: #333; font-weight: bold; }
+    nav a:hover { color: #d16b6b; }
     section { padding: 40px 20px; text-align: center; }
     h2 { color: #d16b6b; margin-bottom: 20px; }
-    .products { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 20px; }
-    .product-card { background: #fff; padding: 15px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+    .products { 
+      display: grid; 
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
+      gap: 20px; 
+      margin-top: 20px; 
+    }
+    .product-card { 
+      background: #fff; 
+      padding: 15px; 
+      border-radius: 10px; 
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1); 
+    }
+    .product-card h3 { margin-top: 0; color: #d16b6b; }
     footer { text-align: center; background: #f8caca; padding: 15px; margin-top: 40px; }
   </style>
 </head>
@@ -52,3 +64,4 @@
 
 </body>
 </html>
+
